Update and rename 5.1 Control Physical and logical access to assets.md to 5.01 Control Physical and logical access to assets.md

--- a/DOMAIN5: Identity and Access Management (IAM)/5.01 Control Physical and logical access to assets.md
+++ b/DOMAIN5: Identity and Access Management (IAM)/5.01 Control Physical and logical access to assets.md
@@ -1,4 +1,4 @@
-## 5.1 Control Physical and logical access to assets ##
+## 5.01 Control Physical and logical access to assets ##
 
 Access control encompasses the systems and processes designed to safeguard an organization’s assets while ensuring that only authorized individuals have the appropriate level of access. Core principles of access control include:
 1. **Need-to-know:** restricts access to information or resources based strictly on a user’s necessity to perform their job. Users are only given access to the specific data or systems required to complete their tasks, minimizing exposure to unnecessary or sensitive information.
@@ -41,47 +41,39 @@ As a security professional you should recognize, assess and protect all the foll
 
 ```mermaid
 
-%%{init: { "theme": "base", "themeVariables": { "background": "#D3D3D3" } }}%%
-
 classDiagram
 class Information {
-  <<Asset>>
-  +All organizational data
-  +From simple files to massive databases
-  +Protected by logical access controls
-  +Goal: Keep unauthorized eyes out
+  "All organizational data"
+  "From simple files to massive databases"
+  "Protected by logical access controls"
+  "Goal: Keep unauthorized eyes out"
 }
 
 class Systems {
-  <<Asset>>
-  +IT platforms delivering core services
-  +File servers, web servers, ERP, etc.
-  +Permissions define who can do what
+  "IT platforms delivering core services"
+  "File servers, web servers, ERP, etc."
+  "Permissions define who can do what"
 }
 
 class Devices {
-  <<Asset>>
-  +Routers, switches, laptops, phones, printers
-  +Includes personal devices holding org data
-  +Each one is an entry point or risk point
+  "Routers, switches, laptops, phones, printers"
+  "Includes personal devices holding org data"
+  "Each one is an entry point or risk point"
 }
 
 class Facilities {
-  <<Asset>>
-  +Buildings, rooms, server closets
-  +Physical security guards the real-world perimeter
+  "Buildings, rooms, server closets"
+  "Physical security guards the real-world perimeter"
 }
 
 class Applications {
-  <<Asset>>
-  +Software that grants access to functions and data
-  +Access must be tightly controlled
+  "Software that grants access to functions and data"
+  "Access must be tightly controlled"
 }
 
 class Services {
-  <<Asset>>
-  +Email, cloud sync, storage, collaboration tools
-  +Access control ensures proper and safe use
+  "Email, cloud sync, storage, collaboration tools"
+  "Access control ensures proper and safe use"
 }
 
 Information -- Applications : "uses / stores"
@@ -89,6 +81,7 @@ Applications -- Systems : "runs on"
 Systems -- Devices : "hosted on"
 Facilities -- Devices : "houses"
 Services -- Systems : "powered by"
+
 ```
 
 :bulb: In most operating systems, access control rules define the permissions or rights that a user (or subject) has over resources (objects) such as files, directories, or processes. These rules typically fall under various logical access modes that determine the level of interaction a subject can have with an object. The basic access modes are:
