Update and rename 5.2 Design identification and authentication strategy (e.g. people, devices and services).md to 5.02 Design identification and authentication strategy (e.g. people, devices and services).md

--- a/DOMAIN5: Identity and Access Management (IAM)/5.02 Design identification and authentication strategy (e.g. people, devices and services).md
+++ b/DOMAIN5: Identity and Access Management (IAM)/5.02 Design identification and authentication strategy (e.g. people, devices and services).md
@@ -47,10 +47,10 @@ Now that you have clear what groups and roles are, what do you have to do with t
 ```mermaid 
 flowchart TD
 
-A[1️⃣ Create Groups] --> B[2️⃣ Define Roles]
-B --> C[3️⃣ Assign Permissions to Roles]
-C --> D[4️⃣ Map Users, Groups, and Roles]
-D --> E[5️⃣ Manage Groups and Roles]
+A["1️⃣ Create Groups"] --> B["2️⃣ Define Roles"]
+B --> C["3️⃣ Assign Permissions to Roles"]
+C --> D["4️⃣ Map Users, Groups, and Roles"]
+D --> E["5️⃣ Manage Groups and Roles"]
 
 %% --- Create Groups ---
 A --> A1[Identify necessary groups based on organizational structure]
@@ -77,8 +77,9 @@ E --> E1[Regularly review and update groups and roles]
 E --> E2[Add/remove users as roles change]
 E --> E3[Monitor and audit activity to detect anomalies or privilege creep]
 
-    classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
-    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
+classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+
 ```
 
 
@@ -203,43 +204,37 @@ The system evaluates: Time of day, Device health, Network you're using, Past beh
 ```mermaid 
 classDiagram
     class Type1 {
-        <<Something You Know>>
-        - Passwords
-        - PINs
-        - Passphrases
+        "Passwords"
+        "PINs"
+        "Passphrases"
     }
 
     class Type2 {
-        <<Something You Have>>
-        - Hardware tokens
-        - Smart cards
-        - OTP apps
+        "Hardware tokens"
+        "Smart cards"
+        "OTP apps"
     }
 
     class Type3 {
-        <<Something You Are>>
-        - Fingerprints
-        - Face ID
-        - Iris scan
+        "Fingerprints"
+        "Face ID"
+        "Iris scan"
     }
 
     class Location {
-        <<Somewhere You Are>>
-        - GPS position
-        - Office network
+        "GPS position"
+        "Office network"
     }
 
     class Behavior {
-        <<Something You Do>>
-        - Typing rhythm
-        - Gesture usage
+        "Typing rhythm"
+        "Gesture usage"
     }
 
     class Context {
-        <<Context-Aware>>
-        - Device health
-        - Time of login
-        - Network risk
+        "Device health"
+        "Time of login"
+        "Network risk"
     }
 
     Type1 --> Context
@@ -247,6 +242,7 @@ classDiagram
     Type3 --> Context
     Location --> Context
     Behavior --> Context
+
 ```
 
 Examples of practical authentication methods are:
@@ -563,9 +559,9 @@ The trust relationship between these three components allows for single authenti
 
 ``` mermaid
 sequenceDiagram
-    participant User as User: Principal
-    participant IdP as Identity Provider: IdP
-    participant SP as Service Provider: Relying Party
+    participant User as User
+    participant IdP as IdentityProvider
+    participant SP as ServiceProvider
 
     User->>SP: Request access to service
     SP->>IdP: Redirect to IdP for authentication
@@ -575,6 +571,7 @@ sequenceDiagram
     SP->>IdP: Validate token/assertion
     IdP-->>SP: Confirm user identity
     SP-->>User: Grant access to service
+
 
 ```
 :brain: Remember the names and the roles of the 3 entities involved in federated access: Principal, IdP and Service Provider.
@@ -843,20 +840,21 @@ Here’s a simple workflow for enabling JIT access. The key idea is that users s
 ``` mermaid
 sequenceDiagram
     participant User
-    participant PolicyOrAdmin as Policy/Admin
+    participant PolicyAdmin as "Policy/Admin"
     participant System
 
-    User->>PolicyOrAdmin: Requests privileged access
-    PolicyOrAdmin-->>User: Approve or Deny request
+    User->>PolicyAdmin: Requests privileged access
+    PolicyAdmin-->>User: Approve or Deny request
     alt Approved
-        PolicyOrAdmin->>User: Send access granted notification
+        PolicyAdmin->>User: Send access granted notification
         User->>System: Access system with elevated privileges
         System-->>User: Perform specific task
         User->>System: Task completed, logs off
         System-->>User: Revoke/delete privileged access
     else Denied
-        PolicyOrAdmin->>User: Send access denied notification
+        PolicyAdmin->>User: Send access denied notification
     end
+
 ```
 
 ### Open Questions ###
