Update 5.06 Implement authentication systems.md

--- a/DOMAIN5: Identity and Access Management (IAM)/5.06 Implement authentication systems.md
+++ b/DOMAIN5: Identity and Access Management (IAM)/5.06 Implement authentication systems.md
@@ -19,13 +19,13 @@ sequenceDiagram
     
     Browser->>Client: Login with Google
     Client-->>Browser: Redirect to GoogleAuth
-    Browser->>GoogleAuth: Auth request - client_id, redirect_uri, scope
+    Browser->>GoogleAuth: "Auth request - client_id, redirect_uri, scope"
     GoogleAuth->>Browser: Login + Consent
     Browser-->>GoogleAuth: Approve
-    GoogleAuth-->>Browser: Redirect to Client + code
-    Browser->>Client: /callback?code=abc123
-    Client->>GoogleAuth: Exchange code → tokens
-    GoogleAuth-->>Client: JSON {access_token, id_token}
+    GoogleAuth-->>Browser: "Redirect to Client + code"
+    Browser->>Client: "/callback?code=abc123"
+    Client->>GoogleAuth: "Exchange code to tokens"
+    GoogleAuth-->>Client: "JSON access_token, id_token"
     Client->>GoogleAPI: Request data with Bearer token
     GoogleAPI-->>Client: Protected data
 ```
