Update 5.D.1 FIDO and FIDO2: Revolutionizing Authentication.md

--- a/DOMAIN5: Identity and Access Management (IAM)/5.D.1 FIDO and FIDO2: Revolutionizing Authentication.md
+++ b/DOMAIN5: Identity and Access Management (IAM)/5.D.1 FIDO and FIDO2: Revolutionizing Authentication.md
@@ -1,4 +1,4 @@
-## FIDO and FIDO2: Revolutionizing Authentication ##
+## 5.D.1 FIDO and FIDO2: Revolutionizing Authentication ##
 
 Traditional password-based systems are increasingly vulnerable to breaches, phishing, and various other cyber threats. This vulnerability has spurred the development of more secure and user-friendly authentication methods, among which FIDO (Fast IDentity Online) and its successor, FIDO2, stand out.
 
