Update 5.D.2 Recap of NIST Special Publication (SP) 800-63B-4, Digital Identity Guidelines: Authentication and Authenticator Management.md

--- a/DOMAIN5: Identity and Access Management (IAM)/5.D.2 Recap of NIST Special Publication (SP) 800-63B-4, Digital Identity Guidelines: Authentication and Authenticator Management.md
+++ b/DOMAIN5: Identity and Access Management (IAM)/5.D.2 Recap of NIST Special Publication (SP) 800-63B-4, Digital Identity Guidelines: Authentication and Authenticator Management.md
@@ -1,4 +1,4 @@
-## NIST Special Publication (SP) 800-63B-4, Digital Identity Guidelines: Authentication and Authenticator Management ##
+## 5.D.2 NIST Special Publication (SP) 800-63B-4, Digital Identity Guidelines: Authentication and Authenticator Management ##
 
 ### Authentication Assurance Levels (AALs) ###
 
