Update 5.Q.1 Easy Questions.md

--- a/DOMAIN5: Identity and Access Management (IAM)/5.Q.1 Easy Questions.md
+++ b/DOMAIN5: Identity and Access Management (IAM)/5.Q.1 Easy Questions.md
@@ -1,4 +1,4 @@
-## Easy Questions ##
+## 5.Q.1 Easy Questions ##
 
 1. In which of the following steps of Access Control do you usually apply the principles of "need to know" and "least privilege"?
 
