Update 5.Q.2 Hard Questions.md

--- a/DOMAIN5: Identity and Access Management (IAM)/5.Q.2 Hard Questions.md
+++ b/DOMAIN5: Identity and Access Management (IAM)/5.Q.2 Hard Questions.md
@@ -1,10 +1,13 @@
-## Hard Questions ##
+## 5.Q.2 Hard Questions ##
 
 1. What may occur if an attacker successfully executes a race condition attack against an Identification and Access Management System?
 
 A. Authentication happens before Identification
+
 B. Authorization is skipped: after Identification the subject has full access
+
 C. Accountability step is skipped
+
 D. Authorization happens before accountability
 
 <details> <summary>Show answer</summary>
@@ -28,8 +31,11 @@ D. Authorization and accountability are distinct steps; reversing them isn’t t
 What should every session have?
 
 A. Identification
+
 B. Timeout
+
 C. Controls to detect anomalous activity
+
 D. All of them
 
 <details> <summary>Show answer</summary>
@@ -53,8 +59,11 @@ C. Anomaly detection is critical but incomplete without authentication controls.
 3. Accountability ensures all actions in a system can be traced to their source. Which of the following activities is not associated with accountability?
 
 A. Counting the number of identifications per day
+
 B. Logging activities
+
 C. Logging authentications
+
 D. Logging privileged accesses
 
 <details> <summary>Show answer</summary>
@@ -79,8 +88,11 @@ D. Privileged access logging ensures oversight of admin actions.
 4. MFA (Multi-Factor Authentication) combines multiple types of credentials. Which of the following combinations of authentication factors is the least secure?
 
 A. Password + PIN
+
 B. Fingerprint + Password
+
 C. Retina + Smartcard
+
 D. Fingerprint + PIN
 
 <details> <summary>Show answer</summary>
@@ -104,8 +116,11 @@ D. Combines biometric and knowledge — also strong.
 5. A frequent traveler must be prevented from accessing company systems from specific airports. What type of authentication factor can enforce this control?
 
 A. Someone you know
+
 B. Somewhere you are
+
 C. Something you know
+
 D. Something you have
 
 <details> <summary>Show answer</summary>
@@ -129,8 +144,11 @@ D. “Something you have” (token or device) doesn’t enforce geo limits.
 6. Identity management (IdM) is the structured process of handling digital identities. Which of the following best represents the lifecycle steps of Identity Management?
 
 A. Identity creation, storage, revoking identities
+
 B. Identification, authentication, authorization
+
 C. Physical and logical identities management
+
 D. Single factor authentication, multifactor authentication
 
 <details> <summary>Show answer</summary>
@@ -154,8 +172,11 @@ D. Refers to authentication methods, not identity processes.
 7. Your organization welcomes a new security analyst. What is the first step in the identity proofing process?
 
 A. Uniquely identify the individual within a specific population or context
+
 B. Register biometric data in the system
+
 C. Validate the connection between asserted identity and the real person
+
 D. Assess authenticity and correlate data with the individual
 
 <details> <summary>Show answer</summary>
@@ -177,8 +198,11 @@ C. & D. Validation steps occur only after the identity has been uniquely establi
 8. Which commands do Windows and Linux use for Just-In-Time access control?
 
 A. runas and sudo
+
 B. run and cd-
+
 C. runas and apt-get install admin
+
 D. privilege escalation and accountability
 
 <details> <summary>Show answer</summary>
@@ -202,8 +226,11 @@ D. Describes concepts, not specific commands.
 9. Which of the following is not usually an advantage of a passwordless authentication system?
 
 A. Faster Identification
+
 B. Improved user experience
+
 C. Faster authentication
+
 D. Reduction of phishing attacks
 
 <details> <summary>Show answer</summary>
@@ -227,8 +254,11 @@ D. Mitigates phishing — no passwords to steal.
 10. Which of the following best describes a service account?
 
 A. It is used by applications or services, must have specific permissions and access rights
+
 B. It is used by applications or services, could have specific permissions and access rights
+
 C. It is used by humans for System Administration
+
 D. It is used by humans for some services, must have specific permissions and access rights
 
 <details> <summary>Show answer</summary>
