Update 6.1 Design and validate assessment, test, and audit strategy.md

--- a/DOMAIN6: Security Assessment and Testing/6.1 Design and validate assessment, test, and audit strategy.md
+++ b/DOMAIN6: Security Assessment and Testing/6.1 Design and validate assessment, test, and audit strategy.md
@@ -26,18 +26,18 @@ And Four Components of an Assessment Approach (*how to assess*):
 
 ```mermaid
 flowchart TD
-    A[NIST SP 800-53A: Assessing Security and Privacy Controls] --> B[Four Types of Assessment Objects]
-    A --> C[Four Components of an Assessment Approach]
+    A["NIST SP 800-53A: Assessing Security and Privacy Controls"] --> B["Four Types of Assessment Objects"]
+    A --> C["Four Components of an Assessment Approach"]
 
-    B --> B1[Specifications - Documents such as policies, plans, procedures, or system security plans]
-    B --> B2[Mechanisms - Security functions or features like encryption or access control]
-    B --> B3[Activities - Operations performed by people or systems such as monitoring or backups]
-    B --> B4[Individuals - People performing roles such as security officers or administrators]
+    B --> B1["Specifications - Documents such as policies, plans, procedures, or system security plans"]
+    B --> B2["Mechanisms - Security functions or features like encryption or access control"]
+    B --> B3["Activities - Operations performed by people or systems such as monitoring or backups"]
+    B --> B4["Individuals - People performing roles such as security officers or administrators"]
 
-    C --> C1[Assessment Object - The target: specifications, mechanisms, activities, or individuals]
-    C --> C2[Assessment Method - How you assess: examine, interview, or test]
-    C --> C3[Assessment Procedure - The step-by-step guide to performing the assessment]
-    C --> C4[Assessment Result - The output such as pass/fail, compliant/non-compliant, or findings]
+    C --> C1["Assessment Object - The target: specifications, mechanisms, activities, or individuals"]
+    C --> C2["Assessment Method - How you assess: examine, interview, or test"]
+    C --> C3["Assessment Procedure - The step-by-step guide to performing the assessment"]
+    C --> C4["Assessment Result - The output such as pass/fail, compliant/non-compliant, or findings"]
 
     classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
     classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
@@ -298,48 +298,47 @@ When an auditor completes a SOC 1, SOC 2, or SOC 3 review, the report will be ei
 Type 2 reports give stronger proof because they show the company didn’t just set up the controls, but also followed them day after day.
 
 ```mermaid
-%%{init: {"theme": "base", "themeVariables": {"primaryColor": "#ffffff", "secondaryColor": "#f2f2f2", "primaryTextColor": "#000000", "lineColor": "#000000"}}}%%
 mindmap
-  root((SOC Reports))
+  root(("SOC Reports"))
     SOC 1
       Purpose
-        - Financial reporting
-        - Ensures systems prevent fraud or errors
+        "Financial reporting"
+        "Ensures systems prevent fraud or errors"
       Typical Users
-        - Payroll services
-        - Billing companies
-        - Accounting providers
+        "Payroll services"
+        "Billing companies"
+        "Accounting providers"
       Focus
-        - Controls relevant to financial statements
+        "Controls relevant to financial statements"
     SOC 2
       Purpose
-        - Data security and system reliability
+        "Data security and system reliability"
       Trust Service Criteria
-        - Security
-        - Availability
-        - Processing Integrity
-        - Confidentiality
-        - Privacy
+        "Security"
+        "Availability"
+        "Processing Integrity"
+        "Confidentiality"
+        "Privacy"
       Typical Users
-        - Cloud providers
-        - SaaS platforms
-        - Payment processors
+        "Cloud providers"
+        "SaaS platforms"
+        "Payment processors"
     SOC 3
       Purpose
-        - Public summary of SOC 2
-        - Demonstrates independent validation of controls
+        "Public summary of SOC 2"
+        "Demonstrates independent validation of controls"
       Features
-        - Non-technical
-        - Publicly shareable
-        - Same five Trust Service Criteria
+        "Non-technical"
+        "Publicly shareable"
+        "Same five Trust Service Criteria"
     Report Types
       Type 1
-        - Checks controls at a specific point in time
-        - Example: "As of January 1st"
+        "Checks controls at a specific point in time"
+        "Example: As of January 1st"
       Type 2
-        - Evaluates control effectiveness over a period (6–12 months)
-        - Example: "From January 1st to December 31st"
-        - Provides stronger assurance
+        "Evaluates control effectiveness over a period (6–12 months)"
+        "Example: From January 1st to December 31st"
+        "Provides stronger assurance"
 
 ```
 
