Update 6.3 Collect security process data (e.g., technical and administrative).md

--- a/DOMAIN6: Security Assessment and Testing/6.3 Collect security process data (e.g., technical and administrative).md
+++ b/DOMAIN6: Security Assessment and Testing/6.3 Collect security process data (e.g., technical and administrative).md
@@ -217,20 +217,21 @@ The steps for planning an effective training program are:
 ```mermaid
 
 flowchart LR
-    A[Risk Assessment] --> B[Audience Segmentation]
-    B --> C[Learning Objectives]
-    C --> D[Training Methods]
-    D --> D1[Instructor-led training]
-    D --> D2[Online e-learning modules]
-    D --> D3[Simulated phishing tests]
-    D --> D4[Policy and procedure reviews]
-    D --> D5[Security newsletters or short videos]
-    D --> E[Scheduling]
-    E --> E1[Regular sessions - yearly/quarterly]
-    E --> E2[Continuous awareness activities - monthly tips, case discussions]
+    A["Risk Assessment"] --> B["Audience Segmentation"]
+    B --> C["Learning Objectives"]
+    C --> D["Training Methods"]
+    D --> D1["Instructor-led training"]
+    D --> D2["Online e-learning modules"]
+    D --> D3["Simulated phishing tests"]
+    D --> D4["Policy and procedure reviews"]
+    D --> D5["Security newsletters or short videos"]
+    D --> E["Scheduling"]
+    E --> E1["Regular sessions - yearly/quarterly"]
+    E --> E2["Continuous awareness activities - monthly tips, case discussions"]
 
     classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
     classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+
 ```
 
 To improve, you must measure. Some useful metrics to evaluate the effectiveness of training include:
