Update 6.5 Conduct or facilitate security audits.md

--- a/DOMAIN6: Security Assessment and Testing/6.5 Conduct or facilitate security audits.md
+++ b/DOMAIN6: Security Assessment and Testing/6.5 Conduct or facilitate security audits.md
@@ -40,28 +40,29 @@ An internal audit typically follows a clear cycle:
 
 ```mermaid
 flowchart LR
-    A[1. Planning] --> B[2. Fieldwork]
-    B --> C[3. Analysis]
-    C --> D[4. Reporting]
-    D --> E[5. Remediation & Follow-Up]
+    A["1. Planning"] --> B["2. Fieldwork"]
+    B --> C["3. Analysis"]
+    C --> D["4. Reporting"]
+    D --> E["5. Remediation & Follow-Up"]
 
-    A --> A1[Define scope: systems, processes, departments, policies]
-    A --> A2[Set goals: compliance, risk exposure, operational performance]
+    A --> A1["Define scope: systems, processes, departments, policies"]
+    A --> A2["Set goals: compliance, risk exposure, operational performance"]
 
-    B --> B1[Collect evidence: system configs, logs, user access lists]
-    B --> B2[Collect evidence: interview notes, screenshots, audit trails]
+    B --> B1["Collect evidence: system configs, logs, user access lists"]
+    B --> B2["Collect evidence: interview notes, screenshots, audit trails"]
 
-    C --> C1[Compare evidence against expected controls]
-    C --> C2[Identify gaps, noncompliance, weaknesses]
+    C --> C1["Compare evidence against expected controls"]
+    C --> C2["Identify gaps, noncompliance, weaknesses"]
 
-    D --> D1[Write clear, factual report]
-    D --> D2[Include risk ratings and recommendations]
+    D --> D1["Write clear, factual report"]
+    D --> D2["Include risk ratings and recommendations"]
 
-    E --> E1[Business/IT team fixes problems]
-    E --> E2[Internal auditors follow up to verify fixes]
+    E --> E1["Business/IT team fixes problems"]
+    E --> E2["Internal auditors follow up to verify fixes"]
 
     classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
     classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+
 ```
 
 Internal audits are a proactive tool. They:
@@ -114,33 +115,34 @@ An external audit usually follows a structured process:
 
 ```mermaid
 flowchart LR
-   A[1. Planning] --> B[2. Documentation Review]
-    B --> C[3. Interviews and Testing]
-    C --> D[4. Report Generation]
+   A["1. Planning"] --> B["2. Documentation Review"]
+    B --> C["3. Interviews and Testing"]
+    C --> D["4. Report Generation"]
 
     A:::step
     B:::step
     C:::step
     D:::step
 
-    A --> A1[Define scope: systems, locations, frameworks - NIST, ISO, COBIT]
-    A --> A2[Set timing and focus areas for the audit]
+    A --> A1["Define scope: systems, locations, frameworks - NIST, ISO, COBIT"]
+    A --> A2["Set timing and focus areas for the audit"]
 
-    B --> B1[Request and review security policies]
-    B --> B2[Check procedures and configurations]
-    B --> B3[Verify evidence of control execution]
+    B --> B1["Request and review security policies"]
+    B --> B2["Check procedures and configurations"]
+    B --> B3["Verify evidence of control execution"]
 
-    C --> C1[Interview staff to confirm practices]
-    C --> C2[Sample logs, system configs, and access control lists]
-    C --> C3[Review vulnerability scans and patch management records]
+    C --> C1["Interview staff to confirm practices"]
+    C --> C2["Sample logs, system configs, and access control lists"]
+    C --> C3["Review vulnerability scans and patch management records"]
 
-    D --> D1[List findings and issues discovered]
-    D --> D2[Grade severity of each finding]
-    D --> D3[Include suggested remediation steps]
+    D --> D1["List findings and issues discovered"]
+    D --> D2["Grade severity of each finding"]
+    D --> D3["Include suggested remediation steps"]
 
-
+    classDef step fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
     classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
     classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+
 ```
 
 :necktie: External audits are a critical checkpoint for cybersecurity programs. They give leadership, regulators, and business partners confidence that an organization’s security isn’t just good on paper — it’s good in practice.
