Update 6.D.1 ISO 19011: The Unsung Hero of InfoSec Audits.md

--- a/DOMAIN6: Security Assessment and Testing/6.D.1 ISO 19011: The Unsung Hero of InfoSec Audits.md
+++ b/DOMAIN6: Security Assessment and Testing/6.D.1 ISO 19011: The Unsung Hero of InfoSec Audits.md
@@ -1,4 +1,4 @@
-## ISO 19011: The Unsung Hero of InfoSec Audits ##
+## 6.D.1 ISO 19011: The Unsung Hero of InfoSec Audits ##
 
 ### Understanding ISO 19011: The Framework Behind Every Good Audit ###
 
