Update 6.Q.1 Easy Questions.md

--- a/DOMAIN6: Security Assessment and Testing/6.Q.1 Easy Questions.md
+++ b/DOMAIN6: Security Assessment and Testing/6.Q.1 Easy Questions.md
@@ -1,10 +1,13 @@
-## Easy Questions ##
+## 6.Q.1 Easy Questions ##
 
 1. During the interface testing of a multi-tier web application used by a healthcare organization, it was discovered that there is inadequate separation between the presentation layer and the data access layer. What is the most likely security consequence of this architectural issue?
 
 A. Direct exposure of sensitive patient data queries to manipulation from the client side
+
 B. Limited scalability, making it difficult to integrate new healthcare technologies
+
 C. Challenges in implementing multi-factor authentication (MFA) on the client side
+
 D. Reduced performance due to excessive communication between client and server
 
 <details> <summary>Show answer</summary>
@@ -29,8 +32,11 @@ C. Challenges in MFA: Not directly affected by layer separation flaws.
 2. You are responsible for implementing a comprehensive security assessment and testing program for your organization. Which of the following is not typically included in such a program?
 
 A. Security Tests
+
 B. Security Audits
+
 C. Threat Hunting
+
 D. Security Assessments
 
 <details> <summary>Show answer</summary>
@@ -50,8 +56,11 @@ Security tests, audits, and assessments are all core elements of a structured te
 3. You are tasked with planning your company’s security strategy. Which of the following sources is least likely to provide strategic value?
 
 A. NIST SP 800-53
+
 B. OSINT (Open Source Intelligence) analysis results
+
 C. Internal audit results
+
 D. ISO 27001
 
 <details> <summary>Show answer</summary>
@@ -68,8 +77,11 @@ OSINT is valuable for understanding external threats, but not ideal for shaping 
 4. How can John evaluate the performance of a crucial web application’s rarely used features without waiting for user complaints?
 
 A. User targeting
+
 B. Unit testing
+
 C. Bot emulation
+
 D. Synthetic transactions
 
 <details> <summary>Show answer</summary>
@@ -94,8 +106,11 @@ User targeting: Focuses on segmentation, not technical assessment.
 5. You are scheduling security testing for a sensitive financial application. Which factors should be considered? (Choose three)
 
 A. Sensitivity of stored information
+
 B. Awareness of available tools
+
 C. Potential DoS impact
+
 D. Testing costs
 
 <details> <summary>Show answer</summary>
@@ -115,8 +130,11 @@ B. Awareness of tools doesn’t directly affect scheduling decisions.
 6. Your organization has recently acquired a vulnerability scanner with the purpose of detecting security vulnerabilities in computer systems, networks, or applications. Which of the following is not a direct benefit of vulnerability scanning?
 
 A. Pinpoints a specific group of computers for conducting vulnerability analysis.
+
 B. Detects unauthorized file modifications.
+
 C. Lists the arrangement of the network and identifies the group of active hosts and related software.
+
 D. Discovers possible vulnerabilities within the selected group of active hosts.
 
 <details> <summary>Show answer</summary>
@@ -143,8 +161,11 @@ These tools help maintain system security posture but do not monitor real-time i
 7. As a Chief Information Security Officer (CISO), it’s your responsibility to ensure that all necessary documentation and approvals are in place before beginning a comprehensive vulnerability test on your organization’s systems. Which of the following documents must you possess before initiating a comprehensive vulnerability test?
 
 A. Written agreement with the authorities
+
 B. Policies and Procedures
+
 C. Code of Conduct
+
 D. Written agreement with the management
 
 <details> <summary>Show answer</summary>
@@ -172,8 +193,11 @@ This document ensures that management formally endorses the test, preventing mis
 8. Your company is working with a third-party service provider to handle critical financial transactions. To ensure that the provider maintains adequate controls and accurate monitoring, you must assess the relevant SOC report. Which of the following SOC reports is most appropriate for verifying continuous financial controls and accuracy over a period of time?
 
 A. SOC 2 Type 2
+
 B. SOC 2 Type 1
+
 C. SOC 1 Type 1
+
 D. SOC 1 Type 2
 
 <details> <summary>Show answer</summary>
@@ -199,8 +223,11 @@ SOC 1 Type 2 is essential when ongoing assurance of financial control reliabilit
 9. Your company is planning to conduct a penetration test to evaluate its security posture. As part of the planning phase, you need to determine which activities are typically included in a penetration test. Which of the following is not a standard activity in a penetration test?
 
 A. Personnel security
+
 B. IT systems
+
 C. Contract verification
+
 D. Physical security
 
 <details> <summary>Show answer</summary>
