Update 6.Q.2 Hard Questions.md

--- a/DOMAIN6: Security Assessment and Testing/6.Q.2 Hard Questions.md
+++ b/DOMAIN6: Security Assessment and Testing/6.Q.2 Hard Questions.md
@@ -1,10 +1,13 @@
-## Hard Questions ##
+## 6.Q.2 Hard Questions ##
 
 1. While planning your company’s security strategy, you discover that testing a service may cause downtime. Which factors should you consider before proceeding? (Choose all that apply)
 
 A. Value of the service
+
 B. Security awareness of users
+
 C. Cost of downtime
+
 D. Cost of testing tools
 
 <details> <summary>Show answer</summary>
@@ -30,8 +33,11 @@ Security awareness: Not directly relevant to testing impact analysis.
 2. According to NIST SP 800-53A, a security and privacy assessment evaluates four components: specifications, mechanisms, activities, and which of the following?
 
 A. Assets
+
 B. Auditors
+
 C. Individuals
+
 D. Technology
 
 <details> <summary>Show answer</summary>
@@ -51,8 +57,11 @@ Technology and assets are covered indirectly under mechanisms and activities, no
 3. Periodic vulnerability scans are important for identifying weaknesses. Which of the following is not part of a vulnerability scan?
 
 A. Identifying operating systems
+
 B. Identifying malware
+
 C. Identifying active hosts
+
 D. Identifying misconfigurations
 
 <details> <summary>Show answer</summary>
@@ -69,8 +78,11 @@ Vulnerability scans detect flaws and misconfigurations but do not identify activ
 4. As the CISO, you’ve completed all stages of a penetration test (Discovery → Enumeration → Exploitation). What should you do next?
 
 A. Inform personnel
+
 B. Document lessons learned
+
 C. Plan the next penetration test
+
 D. Report to management
 
 <details> <summary>Show answer</summary>
@@ -90,8 +102,11 @@ Documentation and planning follow after management review, not before.
 5. Your organization is preparing for a third-party audit to evaluate compliance and security practices. Which of the following must be finalized or prepared before the audit begins? (Choose all that apply)
 
 A. A signed Non-Disclosure Agreement (NDA)
+
 B. A scheduled timeline for the audit activities
+
 C. A detailed audit plan outlining the scope and objectives
+
 D. Selection and confirmation of the audit team members
 
 <details> <summary>Show answer</summary>
