Update 7.01 Understand and comply with investigations.md

--- a/DOMAIN7: Security Operations/7.01 Understand and comply with investigations.md
+++ b/DOMAIN7: Security Operations/7.01 Understand and comply with investigations.md
@@ -126,21 +126,22 @@ In general, Incident Response Best Practices for Evidence Handling can be summed
 
 ```mermaid
 flowchart LR
-    A[Start Investigation] --> B[Record and Document Everything]
-    B --> C[Always Make Copies]
-    C --> D[Prevent Unwanted Changes]
-    D --> E[Verify Integrity]
-    E --> F[Be Aware of Destructive Changes]
-    F --> G[Investigation Continues Safely]
+    A["Start Investigation"] --> B["Record and Document Everything"]
+    B --> C["Always Make Copies"]
+    C --> D["Prevent Unwanted Changes"]
+    D --> E["Verify Integrity"]
+    E --> F["Be Aware of Destructive Changes"]
+    F --> G["Investigation Continues Safely"]
 
-    B --> B1[Timestamps, system states, personnel involved, and actions taken]
-    C --> C1[Create forensic images and work only on copies]
-    D --> D1[Use write-blockers, secure storage, and access controls]
-    E --> E1[Calculate and log hash values - MD5, SHA-1, SHA-256]
-    F --> F1[Plan actions to avoid destroying volatile memory or active system data]
+    B --> B1["Timestamps, system states, personnel involved, and actions taken"]
+    C --> C1["Create forensic images and work only on copies"]
+    D --> D1["Use write-blockers, secure storage, and access controls"]
+    E --> E1["Calculate and log hash values - MD5, SHA-1, SHA-256"]
+    F --> F1["Plan actions to avoid destroying volatile memory or active system data"]
 
     classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
     classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+
 ```
 
 ### Open Questions ###
